--- a/translations/base-en.yaml
+++ b/translations/base-en.yaml
@@ -579,6 +579,11 @@ storyRewards:
         title: Next level
         desc: >-
             Congratulations! By the way, more content is planned for the standalone!
+            
+    no_reward_comingSoon:
+        title: New features coming sooon
+        desc: >-
+            Congratulations! More buildings and possibilities are coming soon though!
 
 settings:
     title: Settings
